# Cuda-Matrix-Multiply

./: CMakeLists.txt  README.md  shell.nix
include/: hello-world.h  main.h  vector.h
src/: main.cu
src/hello-world/: helloWorld.cpp
src/vector/: calculateBlockAmount.cpp  initialize.cpp  multiply.cu  print.cpp  printWolfram.cpp  print_wolfram.cpp
